--- a/package.json
+++ b/package.json
@@ -3,39 +3,35 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.18.3",
-    "chart.js": "^2.8.0",
-    "chartjs": "^0.3.24",
-    "chartjs-plugin-annotation": "^0.5.7",
-    "dotenv": "^8.2.0",
-    "express": "^4.16.4",
-    "fs-extra": "^7.0.1",
-    "ganache-cli": "^6.4.1",
-    "ipfs-api": "^26.1.2",
-    "js-cookie": "^2.2.0",
-    "mongoose": "^5.5.1",
-    "next": "^8.0.3",
-    "next-routes": "^1.4.2",
-    "nodemailer": "^6.1.0",
-    "path": "^0.12.7",
-    "react": "^16.8.5",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "solc": "^0.4.25",
-    "truffle-hdwallet-provider": "^1.0.5",
-    "web3": "^1.0.0-beta.52"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "ipfs-http-client": "^60.0.0",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.7.1",
+    "next": "^14.0.3",
+    "nodemailer": "^6.9.7",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^3.0.0",
+    "web3": "^4.2.2"
   },
   "devDependencies": {
-    "mocha": "^6.1.4"
+    "mocha": "^10.2.0"
   },
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "mocha",
-    "start": "node server.js"
+    "lint": "next lint"
   },
   "keywords": ["blockchain", "voting", "ethereum", "e-voting"],
   "author": "Praneeth Sai Kolla, Sri Ram Sai Guruju, Deepak Yenduri, Amarnath Devarasetty",
