--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^3^2.0.3"
+    "semantic-ui-react" :^2.0.3"
     "web3": "^4.2.2"
   },
   "devDependencies": {
