--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react" :^2.0.3"
-    "web3": "^4.2.2"
+    "semantic-ui-react" :^2.0.3",
+    "web3": "^4.2.2",
   },
   "devDependencies": {
     "mocha": "^10.2.0"
